# thermoworks-ha

./: .gitignore  CHANGELOG.md  HACS_READY.md  LICENSE  PUBLISHING.md  README.md  hacs.json  info.md  pyproject.toml
.github/workflows/: release.yaml  validate.yaml
custom_components/thermoworks/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/thermoworks/ble/: __init__.py  bluedot.py  parser.py
custom_components/thermoworks_bt/: const.py  manifest.json  strings.json
custom_components/thermoworks_bt/ble/: parser.py
scripts/: test_bluedot.py
tests/: conftest.py
tests/ble/: test_bluedot.py  test_parser.py
tests/ha/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_sensor.py
